5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1573_1559.log
== TEST (2019-03-11 19:05:38) 
-- CODE:
frase = ""
print(frase.Ada Lovelace foi a primeira programadora da historia.)
-- ERROR:
File "XXXX", line 2
    print(frase.Ada Lovelace foi a primeira programadora da historia.)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:05:47) 
-- CODE:
frase = ""
print(Ada Lovelace foi a primeira programadora da historia.)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:06:27) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:06:31) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.160075
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
